syntax = "proto3";

package rpcpto;

// Interface exported by all server
service RpcRoute {
	rpc Send2Game(ReqParams) returns (RetParams) {}
	rpc GetInfo(ReqParams) returns (RetParams) {}
}


message ReqParams {
	repeated int64 PInts 	= 1;
	repeated string PStrs	= 2;
}

message RetParams {
	int32 Result			= 1;
	repeated int64 PInts 	= 2;
	repeated string PStrs 	= 3;
}
